tests/tooling/fixtures/native/execution/positive/for_no_condition_break.objc3
module ForNoConditionBreakExec;

fn main() -> i32 {
  let count = 0;
  for (let i = 0; ; i = i + 1) {
    if (i == 4) {
      break;
    }
    count = count + 1;
  }
  return count;
}
