tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_name_extern_fn_pure.objc3
module MisplacedQualifierAfterNameExternFnPure;

extern fn add pure(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
